# wisu

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml  docs.yml  release.yml
assets/: demo.tape
src/: app.rs  main.rs
src/common/: icons.rs  mod.rs  plugins.rs  sort.rs  tree.rs
src/utils/: dir.rs  format.rs  mod.rs
src/workers/: export.rs  mod.rs  tui.rs  view.rs
tests/: cli.rs
