[package]
name = "wisu"
version = "0.1.2"
authors = ["Andrea Frolli <dev.sh1zen@outlook.it>"]
edition = "2024"
description = "A blazingly fast, minimalist directory tree viewer, written in Rust."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sh1zen/wisu"
repository = "https://github.com/sh1zen/wisu"
keywords = ["ls", "tree", "filesystem", "command-line"]
categories = ["command-line-utilities", "filesystem", "development-tools"]

[dependencies]
anyhow = "1.0.100"
colored = "3.0.0"
clap = { version = "4.5.49", features = ["derive"] }
ignore = "0.4.24"
lscolors = "0.21.0"
url = "2.5.7"
ratatui = "0.30.0-alpha.5"
natord = "1.0.9"
once_cell = "1.21.3"
indicatif = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-xml-rs = "0.8.1"
csv = "1.4.0"
toml = "0.9.8"

# Dependencies for testing the command-line interface
[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"

[build-dependencies]
walkdir = "2.5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

