[package]
name = "wisu"
version = "0.1.5"
authors = ["Andrea Frolli <dev.sh1zen@outlook.it>"]
edition = "2024"
description = "A fast minimalist directory tree viewer, written in Rust."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sh1zen/wisu"
repository = "https://github.com/sh1zen/wisu"
keywords = ["ls", "tree", "filesystem", "command-line"]
categories = ["command-line-utilities", "filesystem", "development-tools"]

[dependencies]
# terminal
colored = "3.0.0"
indicatif = "0.18.3"
lscolors = "0.21.0"
ratatui = "0.30.0"
#utils
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
ignore = "0.4.25"
once_cell = "1.21.3"
url = "2.5.8"
#manipulation
regex = "1.12.2"
natord = "1.0.9"
# data
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-xml-rs = "0.8.2"
toml = "0.9.11+spec-1.1.0"
notify = "8.2.0"

# Dependencies for testing the command-line interface
[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"

[build-dependencies]
walkdir = "2.5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

